--- a/frontend/src/app/main-grid/main-grid.component.css
+++ b/frontend/src/app/main-grid/main-grid.component.css
@@ -1,3 +1,9 @@
+.container{
+ 
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        background-color: url('./../../assets/img/bg.png');
+ 
+}
 .pagination{
     align-items: center;
     justify-content: center;
@@ -20,12 +26,46 @@
     
 }
 
+/* SCROLL BAR */
+/* Estilo de la barra de desplazamiento */
+/* Anchura y color de la barra */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Estilo del 'pulgar' de la barra de desplazamiento */
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+  }
+  
+  /* Estilo de la pista (fondo) de la barra de desplazamiento */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 6px;
+  }
+
+  
 .principal-card{
     /* margin: 1% 0 5% 0;
     padding: 2% ; */
     -webkit-box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
     -moz-box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
     box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
+   background-color:  #8594a39e;
+   border-color: #8594a39e;
+   margin-top: 15px;
+   border-radius: 20px 0px;
+
+  
+    /* overflow: auto; */
+    /* margin-bottom: 15px; */
+}
+
+.content-discounts{
+    max-height: 537px;
+    overflow: auto;
+    
 }
 
 .retail-search{
