--- a/frontend/src/app/main-grid/main-grid.component.html
+++ b/frontend/src/app/main-grid/main-grid.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="card principal-card">
+    <div class="content-discounts">
     <div class="card-body">
       <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="paginateData()" placeholder="Buscar por comerciante...">
 
@@ -24,4 +25,5 @@
       <button class="btn " (click)="nextPage()">>></button>
     </div>
   </div>
+</div>
 </div>
