--- a/frontend/src/app/card/card.component.html
+++ b/frontend/src/app/card/card.component.html
@@ -1,3 +1,4 @@
+
         <div class="card" style="">
             <div class="card-body">
               <img class="card-img-top" src="./assets/img/product.png"  alt="Card image cap">
@@ -12,4 +13,7 @@
               <img *ngIf="!isLiked" src="./assets/img/amor.png" alt="" width="32px" (click)="youLikeIt()">
               <img *ngIf="isLiked" src="./assets/img/corazon.png" alt="" width="32px" (click)="youLikeIt()">
             </div>
+            <!-- <button (click)="clearCart()">Vaciar Carrito</button> -->
           </div>
+
+      
