--- a/frontend/src/app/main-grid/main-grid.component.css
+++ b/frontend/src/app/main-grid/main-grid.component.css
@@ -1,13 +1,16 @@
-.container{
- 
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        background-color: url('./../../assets/img/bg.png');
- 
-}
+
+/* @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
+} */
 .pagination{
     align-items: center;
     justify-content: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    color: #c9e9e1;
+    text-align: center;
+    /* background-color: #aeb5bb; */
 }
 
 .pagination button{
@@ -52,10 +55,10 @@
     -webkit-box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
     -moz-box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
     box-shadow: -6px 24px 46px -20px rgba(0,0,0,0.75);
-   background-color:  #8594a39e;
+   background-color:  #8b988e;
    border-color: #8594a39e;
    margin-top: 15px;
-   border-radius: 20px 0px;
+   border-radius: 15px 15px 0px 0px;
 
   
     /* overflow: auto; */
@@ -63,7 +66,7 @@
 }
 
 .content-discounts{
-    max-height: 537px;
+    max-height: 492px;
     overflow: auto;
     
 }
@@ -71,4 +74,198 @@
 .retail-search{
     border:1px solid rgb(122, 157, 190);
     border-radius: 5px;
+}
+
+select{
+    background: #e7fff9;
+    border-color: #e7fff9;
+    color: #898989;
+    height: 28px;
+    padding: 0;
+    font-size: 13px;
+
+}
+
+input{
+    background: #e7fff9;
+    border-color: #e7fff9;
+    color: #898989;
+    height: 28px;
+    padding: 0;
+    padding-left: 5px;
+    font-size: 13px;
+    border-radius: 5px;
+    margin: 5px 0px
+}
+
+
+
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.btn-info{
+    border-radius: 0px 10px 10px 0px;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    position : absolute;
+}
+
+#sidebar {
+    min-width: 295px;
+    max-width: 250px;
+    background: #9fccc1;
+    color: #fff;
+    transition: all 0.3s;
+    position: absolute;
+    z-index: 9;
+    border-radius: 0px 10px 10px 0px;
+}
+
+#sidebar.active {
+    margin-left: -400px;
+}
+
+#sidebar .sidebar-header {
+    padding: 10px;
+    background: #9fccc1;
+    border-radius: 10px;
+}
+
+#sidebar ul.components {
+    padding: 10px 15px;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -300px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+
+    .navbar-toggler{display: none!important;}
+   
 }
