--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,9 +1,9 @@
-/* .navbar {
-    background-color: #def6ffb9!important;
+.navbar {
+    /* background-color: #def6ffb9!important; */
     color: #fff;
-    -webkit-box-shadow: 7px 32px 37px -27px rgba(61,159,189,1);
-    -moz-box-shadow: 7px 32px 37px -27px rgba(61,159,189,1);
-    box-shadow: 7px 32px 37px -27px rgba(61,159,189,1);
+    -webkit-box-shadow: 2px 17px 20px -21px rgba(201,201,201,1);
+    -moz-box-shadow: 2px 17px 20px -21px rgba(201,201,201,1);
+    box-shadow: 2px 17px 20px -21px rgba(201,201,201,1);
   }
   
   .navbar-brand {
@@ -28,4 +28,8 @@
   .nav-link:hover {
     text-decoration: underline;
   }
-   */
+  @media (max-width: 1200px) {
+ 
+    .navbar-toggler{display: none!important;}
+   
+}
